# AI-839

./: README.md
srinivasan-ai-839/: .gitignore  README.md  _quarto.yml  ch06.ipynb  ch06.py  dataset_id_T01_V3_214.csv  gradients.ipynb  index.qmd  mlflow_automate.bat  mlflow_automate.sh  notebook3f941fc1bd.ipynb  objects.json  pyproject.toml  requirements.txt
srinivasan-ai-839/.quarto/idx/: about.qmd.json  index.qmd.json
srinivasan-ai-839/.quarto/xref/: 04cefc27  14b7dfc6  374de107  45feec99  5405edaa  9ac0918c  9ae34743  INDEX  a867b9d8  db7b43b6  e125222d  f34691e5
srinivasan-ai-839/.viz/: stats.json
srinivasan-ai-839/Minor_Project/: Data_Card.qmd  MLOps_Card.qmd  Model_Card.qmd  Project_Card.qmd
srinivasan-ai-839/_site/: about.html  gradients.html  index.html  notebook3f941fc1bd.html  search.json
srinivasan-ai-839/_site/Minor_Project/: Data_Card.html  MLOps_Card.html  Model_Card.html  Project_Card.html
srinivasan-ai-839/mlflow-dockerfile/: Dockerfile
srinivasan-ai-839/notebooks/: Hw06.ipynb  Mini_Project.ipynb  ModelTraining.ipynb  New_Model.ipynb  data_exploration.ipynb  evidently_report_dataset_214.html  hw01.ipynb  hw02.ipynb  soybean_all_features.csv  soybean_meta_features.csv  test.ipynb  test_suite_dataset_214.html
srinivasan-ai-839/reference/: _isTelephone.qmd  create_pipeline.qmd  data_drift_quality_checks.qmd  data_drift_quality_checks_new.qmd  evaluate_model.qmd  index.qmd  preprocess_and_drift_checks.qmd  preprocess_data.qmd  split_dataset.qmd  train_model.qmd
srinivasan-ai-839/src/: a.out  test.cpp
(+65 files in other folders)
