[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "srinivasan_ai_839"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
srinivasan-ai-839 = "srinivasan_ai_839.__main__:main"

[tool.kedro]
package_name = "srinivasan_ai_839"
project_name = "Srinivasan-ai-839"
kedro_init_version = "0.19.7"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "srinivasan_ai_839.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "7b1f36fd37694a35ba7106d52bc99cd0"
